config/default/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
  namespace: ns-two
  labels:
    key: testingPodProtector
spec:
  containers:
  - name: alpine
    image: alpine:latest
    command: ["sh", "-c", "while true; do sleep 3600; done"]
    resources: {}
