config/default/podlabelguard-admissionwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: podlabelguard
webhooks:
- name: podlabelguard.yourdomain.com
  clientConfig:
    service:
      name: pod-guard
      namespace: ns-two
      path: "/validate-core-v1-pod-labels"
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZRRENDQXlpZ0F3SUJBZ0lVYTNIazcyVHRMcStWdGludGo3M1JJM2FxQ3dzd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0h6RWRNQnNHQTFVRUF3d1VjRzlrTFdkMVlYSmtMbTV6TFhSM2J5NXpkbU13SGhjTk1qUXdOakV5TVRreApNek15V2hjTk1qVXdOakV5TVRreE16TXlXakFmTVIwd0d3WURWUVFEREJSd2IyUXRaM1ZoY21RdWJuTXRkSGR2CkxuTjJZekNDQWlJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dJUEFEQ0NBZ29DZ2dJQkFLRlhKbE5Nb1phd3M5UmMKYlA4Z01vbElsRUZOK1M2bzBCUFlNRCt4ZGppRlR5UUl6dWIvN3RuQlowRGNMUlpIaVlybFRHYlgwSzlPak8wWAp6QUhXc2owMHpUa [...]
  rules:
  - operations: [ "CREATE", "UPDATE" ]
    apiGroups: [ "" ]
    apiVersions: [ "v1" ]
    resources: [ "pods" ]
  admissionReviewVersions: ["v1"]
  sideEffects: None
